dll_build_name returns true even if file is missing.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b23

      dll_build_name builds the proper path to a library given a list of paths seperated by path_seperator and a library name. It adds in the platform specific endings etc.

      It is documented to return whether the file exists, but only does so if a path_seperator exists in the path.

      Add file availability check in the other cases.

            Assignee:
            Goetz Lindenmaier
            Reporter:
            Goetz Lindenmaier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: