8186072: dll_build_name returns true even if file is missing

Split dll_build_name into two functions and consolidate to os.cpp file.

Reviewed-by: stuefe, dholmes